# drss25

./: .gitignore  README.md  Train.py  gen_weiche_mit_fahrstraße.py  install_hack.sh  main.py  planpro2sumo.py  pylynx-signal-webserver.py  pyproject.toml
sumo-config/: weiche.con.xml  weiche.edg.xml  weiche.net.xml  weiche.nod.xml  weiche.routes.xml  weiche.scenario.sumocfg
