[project]
name = "drss25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cli-importer",
    "interlocking",
    "planpro-exporter",
    "planpro-importer",
    "railway-route-generator",
    "ruff>=0.11.13",
    "sumoexporter",
    "yaramo",
]

[tool.uv.sources]
sumoexporter = { git = "https://github.com/simulate-digital-rail/sumo-exporter.git", rev = "yaramo2" }
planpro-exporter = { git = "https://github.com/simulate-digital-rail/planpro-exporter.git", rev = "yaramo2" }
interlocking = { git = "https://github.com/simulate-digital-rail/interlocking.git", rev = "yaramo2" }
cli-importer = { git = "https://github.com/simulate-digital-rail/cli-importer.git", rev = "yaramo2" }
railway-route-generator = { git = "https://github.com/simulate-digital-rail/railway-route-generator.git", rev = "yaramo2" }
planpro-importer = { git = "https://github.com/simulate-digital-rail/planpro-importer.git", rev = "yaramo2" }
yaramo = { git = "https://github.com/simulate-digital-rail/yaramo.git", rev = "yaramo2" }
